# service/src/main/resources/api.yml
@@ -4,6 +4,7 @@ info:
   title: realmeet
 servers:
   - url: 'http://localhost:8080'
+
 paths:
   /rooms/{id}:
     get:
@@ -12,6 +13,7 @@ paths:
       tags:
         - room
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -35,6 +37,7 @@ paths:
       tags:
         - room
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -54,6 +57,7 @@ paths:
       tags:
         - room
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -81,6 +85,8 @@ paths:
       operationId: createRoom
       tags:
         - room
+      parameters:
+        - $ref: '#/components/parameters/apiKey'
       requestBody:
         content:
           application/json:
@@ -104,6 +110,7 @@ paths:
       tags:
         - allocation
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: employeeEmail
           in: query
           description: Email of the employee
@@ -146,6 +153,8 @@ paths:
       operationId: createAllocation
       tags:
         - allocation
+      parameters:
+        - $ref: '#/components/parameters/apiKey'
       requestBody:
         content:
           application/json:
@@ -171,6 +180,7 @@ paths:
       tags:
         - allocation
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -191,6 +201,7 @@ paths:
       tags:
         - allocation
       parameters:
+        - $ref: '#/components/parameters/apiKey'
         - name: id
           in: path
           required: true
@@ -211,7 +222,6 @@ paths:
           description: 'Not Found'
         422:
           $ref: '#/components/responses/UnprocessableEntity'
-
 
 components:
   schemas:
@@ -314,3 +324,10 @@ components:
       description: 'The page of records to fetch (0 index based)'
       schema:
         type: integer
+    apiKey:
+      name: api-key
+      in: header
+      description: 'The API key to authenticate the request'
+      required: true
+      schema:
+        type: string
